# django-system-registry

./: .gitignore  README.md  pyproject.toml  tox.ini
system_resgistry/: admin.py  apps.py  cache.py  conf.py  models.py  registry.py  services.py
system_resgistry/management/commands/: sync_system_settings.py
system_resgistry/migrations/: 0001_initial.py
tests/: helpers.py  settings.py  test_admin.py  test_commands.py  test_models.py  test_registry.py  test_services.py
